change max-width of some sections

--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
         </div>
     </div>
 
+    <!-- Our users -->
     <div class="our-users">
         <img src="./images/UnitedNations.svg" alt="">
         <img src="./images/Swiggy.svg" alt="">
@@ -123,6 +124,7 @@
         <img src="./images/gojek.svg" alt="">
     </div>
 
+    <!-- User reviews  -->
     <div class="user-reviews">
         <img src="./images/reviews_img.png" alt="">
         <div class="review">
@@ -136,6 +138,7 @@
         </div>
     </div>
 
+    <!-- How we can help  -->
     <div class="how-we-can-help">
         <h3>See how we can help you</h3>
 
@@ -160,6 +163,7 @@
         </div>
     </div>
 
+    <!-- Our valued contributors  -->
     <div class="our-valued-contributors">
         <div class="head">
             <h2>Our Valued Contributors</h2>
@@ -203,6 +207,7 @@
         </div>
     </div>
 
+    <!-- Get going  -->
     <div class="get-going">
         <img class="logo-medium" src="./images/ODM_logo1.svg" alt="">
         <h2>Get going with WebODM</h2>
@@ -211,6 +216,7 @@
         </a>
     </div>
 
+    <!-- Footer  -->
     <div class="footer">
         <div class="group one">
             <div class="logo">
@@ -288,6 +294,7 @@
         </div>
     </div>
 
+    <!-- Footer - copy  -->
     <div class="copy">
         <p>Made with <span class="text-highlight">&#9825;</span> of OpenDroneMap contributors</p>
         <div class="social">
