--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <!-- Navbar -->
     <nav>
         <div class="left">
-            <div class="logo">
+            <a href="./index.html" class="logo">
                 <img class="logo-small" src="./images/ODM_logo1.svg" alt="">
                 <p>OpenDroneMap</p>
-            </div>
+            </a>
     
             <div class="menu-items">
                 <div class="all-products">
-                    <a href="">All products</a>
+                    <a href="./products.html">All products</a>
                 </div>
         
                 <div class="forum">
@@ -84,7 +84,7 @@
             </div>
             <div class="feature five">
                 <h2>Point Clouds</h2>
-                <p>TGeoreferenced, filtered and classified dense point clouds</p>
+                <p>Georeferenced, filtered and classified dense point clouds</p>
             </div>
         </div>
         <div class="features-buttons">
@@ -219,10 +219,10 @@
     <!-- Footer  -->
     <div class="footer">
         <div class="group one">
-            <div class="logo">
+            <a href="./index.html" class="logo">
                 <img class="logo-small" src="./images/ODM_logo1.svg" alt="">
                 <p>OpenDroneMap</p>
-            </div>
+            </a>
             <a href="">Terms of service</a>
             <a href="">Privacy details</a>
             <a href="">Trademark details</a>
